package payroll;

public interface ICalculateTax{
    double calculateTax(double income);
}


