' Generated by UML Generator
' Encoded: rLPHRzCm47xFh_1ZIjUgj21DbK0hjDCYRQAYVK488TUvTXQEKpaEB8pkjsF7IHVRgLfD0y5BPFk-dEyxVtVsHIQna7d2WkmRvLiiS888mrasaLBGLIuX8YbVq9-01i4jZG4HAWY382XHQ84P5iLxp4ZEi4p54ZA9xWE4UfbZ6NjOz0Pn-E4jXntzUqzz7gJoTfapDXVf6h8i5GORTiReUqhZ6Z9H9aAnX2EuAy3nX_KK54sP09SEQbUJckD2f8pTO8ut84ewtNkLA4d93YMOyX2BJQO8gHJnpUSldWDt8vCHIBOiBVHygc8Te-kKOAQ7PRfomN42jLEzvCvfF4QKIpsK-AwPsMLpMcvr9mM-IgTZ5AVvYe5AzVbWe2qhd87XVJblM5yFZ5cdlUk67vOYQGHyXfnmpv0zgqBL9zdTGCbtjcUl4zxahX4Buq-RzeJBzJBKoLg2K2J39ENobXLcjGw_Km-gVpu15jbDpYJTCWeYTEtlzYbec7Q756sEdrJp-aTpbg0eHxDgQFbIv46iCG4KrQv04IYTFP36IaWvINNgN2xxWAm2U7Ob7T53OUVImPmYnL9H5eVmOFX_G5TFqCyXBJvLLmqjr5enelhFAiCwMYF4VLVyE5dElhviY6FG7uvynD12Z5eG8mlnoaPSHpVHqjfcU5u9rS4C7Iq_DZUh-BIyMH4TAq7_WddsEdGART8ijA7JkItZg29tKXtwHFvgCVu3Kcvhp0RdzEOJ6tth0-X5h-VT8u7tAEZtVxrzzEhRjHVx6BsxoRXmYBJ1cXlP5ueJXMtqGx2RWBE_CWOjjU9iqOBmz_5En-Pm0JnMhzRV
' URL: http://www.plantuml.com/plantuml/uml/rLPHRzCm47xFh_1ZIjUgj21DbK0hjDCYRQAYVK488TUvTXQEKpaEB8pkjsF7IHVRgLfD0y5BPFk-dEyxVtVsHIQna7d2WkmRvLiiS888mrasaLBGLIuX8YbVq9-01i4jZG4HAWY382XHQ84P5iLxp4ZEi4p54ZA9xWE4UfbZ6NjOz0Pn-E4jXntzUqzz7gJoTfapDXVf6h8i5GORTiReUqhZ6Z9H9aAnX2EuAy3nX_KK54sP09SEQbUJckD2f8pTO8ut84ewtNkLA4d93YMOyX2BJQO8gHJnpUSldWDt8vCHIBOiBVHygc8Te-kKOAQ7PRfomN42jLEzvCvfF4QKIpsK-AwPsMLpMcvr9mM-IgTZ5AVvYe5AzVbWe2qhd87XVJblM5yFZ5cdlUk67vOYQGHyXfnmpv0zgqBL9zdTGCbtjcUl4zxahX4Buq-RzeJBzJBKoLg2K2J39ENobXLcjGw_Km-gVpu15jbDpYJTCWeYTEtlzYbec7Q756sEdrJp-aTpbg0eHxDgQFbIv46iCG4KrQv04IYTFP36IaWvINNgN2xxWAm2U7Ob7T53OUVImPmYnL9H5eVmOFX_G5TFqCyXBJvLLmqjr5enelhFAiCwMYF4VLVyE5dElhviY6FG7uvynD12Z5eG8mlnoaPSHpVHqjfcU5u9rS4C7Iq_DZUh-BIyMH4TAq7_WddsEdGART8ijA7JkItZg29tKXtwHFvgCVu3Kcvhp0RdzEOJ6tth0-X5h-VT8u7tAEZtVxrzzEhRjHVx6BsxoRXmYBJ1cXlP5ueJXMtqGx2RWBE_CWOjjU9iqOBmz_5En-Pm0JnMhzRV
' Generated on: 2026-03-30T18:01:36.531980

@startuml
skinparam classAttributeIconSize 0
hide circle

class SalaryCalculatorTest {
  -salaryCalculator: SalaryCalculator = new SalaryCalculator()
  --
  ~testFullProfessorSalary(): void
  ~testAssociateProfessorSalary(): void
  ~testHeadOfDepartmentSalary(): void
}

class PayrollManager {
  +{static} main(args: String[]): void
}

class HeadOfDepartment {
  -employmentDate: LocalDate
  -surname: String
  -name: String
  -id: int
  -taxCalculator: TaxCalculator
  -extraHoD: double = 800
  -baseSalaryFP: double = 5000
  --
  +HeadOfDepartment(start: LocalDate, surname: String, name: String, id: int)
  +getDateEmployment(): LocalDate
  +getSurname(): String
  +getSalaryAfterTax(monthlySalary: double): double
  +getYearsMultiplier(): double
  +getBaseSalary(): double
}

class SalaryCalculator {
  +calculateSalary(employee: IEmployee): double
}

interface ICalculateTax {
  ~calculateTax(income: double): double
}

class FullProfessor {
  -employmentDate: LocalDate
  -surname: String
  -name: String
  -id: int
  -baseSalaryFP: double = 5000
  -yearsMultiplierFP: double = 50
  -taxCalculator: TaxCalculator
  --
  +FullProfessor(employmentDate: LocalDate, surname: String, name: String, id: int)
  +getDateEmployment(): LocalDate
  +getSalaryAfterTax(monthlySalary: double): double
  +getSurname(): String
  +getYearsMultiplier(): double
  +getBaseSalary(): double
}

interface IEmployee {
  +getDateEmployment(): LocalDate
  +getSurname(): String
  +getSalaryAfterTax(monthlySalary: double): double
  +getYearsMultiplier(): double
  +getBaseSalary(): double
}

class TaxCalculator {
  -{static} RATE_1: double = 0.23
  -{static} RATE_2: double = 0.33
  -{static} RATE_3: double = 0.43
  -{static} LIMIT_1: double = 28000
  -{static} LIMIT_2: double = 50000
  --
  +calculateTax(yearlyIncome: double): double
}

class AssociateProfessor {
  -employmentDate: LocalDate
  -surname: String
  -name: String
  -id: int
  -yearsMultiplierAP: double = 20
  -baseSalaryAP: double = 3000
  -taxCalculator: TaxCalculator
  --
  +AssociateProfessor(employmentDate: LocalDate, surname: String, name: String, id: int)
  +getDateEmployment(): LocalDate
  +getSurname(): String
  +getSalaryAfterTax(monthlySalary: double): double
  +getYearsMultiplier(): double
  +getBaseSalary(): double
}

interface ICalculateSalary {
  ~calculateSalary(employee: IEmployee): double
}

SalaryCalculatorTest *-- SalaryCalculator
HeadOfDepartment ..|> IEmployee
HeadOfDepartment *-- TaxCalculator
SalaryCalculator ..|> ICalculateSalary
SalaryCalculator ..> IEmployee
FullProfessor ..|> IEmployee
FullProfessor *-- TaxCalculator
TaxCalculator ..|> ICalculateTax
AssociateProfessor ..|> IEmployee
AssociateProfessor *-- TaxCalculator
ICalculateSalary ..> IEmployee
@enduml